--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -4,6 +4,9 @@ on:
   release:
     types: [published]
 
+permissions:
+  contents: write
+
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -18,6 +21,23 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+          ref: main
+
+      - name: Update version badge in README
+        run: |
+          VERSION="${{ github.event.release.tag_name }}"
+          # Remove 'v' prefix if present
+          VERSION_NUM="${VERSION#v}"
+
+          # Update the version badge in README.md
+          sed -i "s/version-[0-9]*\.[0-9]*\.[0-9]*-blue/version-${VERSION_NUM}-blue/g" README.md
+
+          # Commit and push if there are changes
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git diff --staged --quiet || git commit -m "chore: update version badge to ${VERSION}"
+          git push
 
       - name: Install Vercel CLI
         run: npm install -g vercel
@@ -33,7 +53,11 @@ jobs:
           echo "## 🚀 Production Release" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Version:** ${{ github.event.release.tag_name }}" >> $GITHUB_STEP_SUMMARY
-          echo "**URL:** ${{ steps.deploy.outputs.url }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Environment | URL |" >> $GITHUB_STEP_SUMMARY
+          echo "|-------------|-----|" >> $GITHUB_STEP_SUMMARY
+          echo "| **Production** | [aquarioufpb.com](https://aquarioufpb.com) |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Vercel URL** | ${{ steps.deploy.outputs.url }} |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Release Notes:**" >> $GITHUB_STEP_SUMMARY
           echo "${{ github.event.release.body }}" >> $GITHUB_STEP_SUMMARY
